--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@
 
             <ul class="hidden md:flex gap-8 text-white font-medium">
             <li><a href="index.html" class="hover:text-red-400 transition duration-300">Home</a></li>
-            <li><a href="games.html" class="hover:text-red-400 transition duration-300 text-red-400">Games</a></li>
-            <li><a href="about.html" class="hover:text-red-400 transition duration-300">About</a></li>
+            <li><a href="games.html" class="hover:text-red-400 transition duration-300">Games</a></li>
+            <li><a href="about.html" class="text-red-400 transition duration-300">About</a></li>
             </ul>
 
             <div id="bar" class="md:hidden cursor-pointer">
