--- a/games.html
+++ b/games.html
@@ -17,7 +17,7 @@
 
             <ul class="hidden md:flex gap-8 text-white font-medium">
             <li><a href="index.html" class="hover:text-red-400 transition duration-300">Home</a></li>
-            <li><a href="games.html" class="hover:text-red-400 transition duration-300 text-red-400">Games</a></li>
+            <li><a href="games.html" class="text-red-400 transition duration-300">Games</a></li>
             <li><a href="about.html" class="hover:text-red-400 transition duration-300">About</a></li>
             </ul>
 
